--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">CLASS</span>
-                  <a href="javascript/index.html" class="overlay-text-thumb-donut bts">클래스</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/javascript/index.html" class="overlay-text-thumb1-donut bts">클래스</a>
+                  <a href="class/index.html" class="overlay-text-thumb-donut bts">바로보기</a>
+                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/class/index.html" class="overlay-text-thumb1-donut bts">소스보기</a>
                   <span class="overlay-text-thumb2-donut">CLASS</span>
                 </div>
                 <img src="assets/img/parrot_3d.png" alt="portfolio">
@@ -227,7 +227,7 @@
                 <img src="assets/img/polar_bear_3d.png" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>HTML</h5>
-                  <p>HTML</p>
+                  <p>HTML 레퍼런스북</p>
                   <span>HTML</span>
                 </div>
               </div>
@@ -247,7 +247,7 @@
                 <img src="assets/img/sloth_3d.png" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>CSS</h5>
-                  <p>CSS</p>
+                  <p>CSS 레퍼런스북</p>
                   <span>CSS</span>
                 </div>
               </div>
@@ -260,14 +260,14 @@
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">SITE 1</span>
-                  <a href="site/site1/index.html" class="overlay-text-thumb-donut bts">SITE 1</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/site/site1/index.html" class="overlay-text-thumb1-donut bts">사이트 제작하기_1</a>
+                  <a href="site/site1/index.html" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/site/site1/index.html" class="overlay-text-thumb1-donut bts">바로보기</a>
                   <span class="overlay-text-thumb2-donut">SITE</span>
                 </div>
                 <img src="assets/img/lion_3d.png" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>SITE</h5>
-                  <p>SITE</p>
+                  <p>SITE 유형_01</p>
                   <span>SITE</span>
                 </div>
               </div>
@@ -279,14 +279,14 @@
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">SITE 2</span>
-                  <a href="site/site2/index.html" class="overlay-text-thumb-donut">SITE 2</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/site/site2/index.html" class="overlay-text-thumb1-donut">사이트 제작하기_2</a>
+                  <a href="site/site2/index.html" class="overlay-text-thumb-donut">소스보기</a>
+                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/site/site2/index.html" class="overlay-text-thumb1-donut bts">바로보기</a>
                   <span class="overlay-text-thumb2-donut">SITE 2</span>
                 </div>
                 <img src="assets/img/snowman_3d.png" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>SITE</h5>
-                  <p>SITE</p>
+                  <p>SITE 유형_02</p>
                   <span>SITE</span>
                 </div>
               </div>
@@ -298,14 +298,14 @@
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">SITE 3</span>
-                  <a href="site/site3/index.html" class="overlay-text-thumb-donut bts">SITE 3</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/site/site3/index.html" class="overlay-text-thumb1-donut bts">사이트 제작하기3</a>
+                  <a href="site/site3/index.html" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/site/site3/index.html" class="overlay-text-thumb1-donut bts">바로보기</a>
                   <span class="overlay-text-thumb2-donut">SITE 3</span>
                 </div>
                 <img src="assets/img/sun_with_face_3d.png" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>SITE</h5>
-                  <p>SITE</p>
+                  <p>SITE 유형_03</p>
                   <span>SITE</span>
                 </div>
               </div>
@@ -316,15 +316,15 @@
           <section class="color-shape site">
               <div class="image-wrap">
                 <div class="hover-wrap">
-                  <span class="overlay-img-donut">SITE_01</span>
-                  <a href="site/site1/index.html" class="overlay-text-thumb-donut bts">SITE_01</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/site/site1/index.html" class="overlay-text-thumb1-donut bts">사이트 제작하기1</a>
-                  <span class="overlay-text-thumb2-donut">SITE_01</span>
+                  <span class="overlay-img-donut">SITE_04</span>
+                  <a href="site/site1/index.html" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/site/site1/index.html" class="overlay-text-thumb1-donut bts">바로보기</a>
+                  <span class="overlay-text-thumb2-donut">SITE 4</span>
                 </div>
                 <img src="assets/img/tropical_fish_3d.png" alt="portfolio">
                 <div class="img-text donutImg">
-                  <h5>SITE_01</h5>
-                  <p>SITE</p>
+                  <h5>SITE</h5>
+                  <p>SITE 유형_04</p>
                   <span>SITE</span>
                 </div>
               </div>
@@ -336,8 +336,8 @@
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">JAVASCRIPT</span>
-                  <a href="javascript/effect/searchEffect.html" class="overlay-text-thumb-donut bts">Search</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/javascript/effect/searchEffect.html" class="overlay-text-thumb1-donut bts">검색 효과</a>
+                  <a href="javascript/effect/searchEffect.html" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/javascript/effect/searchEffect.html" class="overlay-text-thumb1-donut bts">바로보기</a>
                   <span class="overlay-text-thumb2-donut">SCRIPT</span>
                 </div>
                 <img src="assets/img/club_suit_3d.png" alt="portfolio">
@@ -355,8 +355,8 @@
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">JAVASCRIPT</span>
-                  <a href="javascript/effect/quizEffect.html" class="overlay-text-thumb-donut bts">Quiz</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/javascript/effect/quizEffect.html" class="overlay-text-thumb1-donut bts">퀴즈 효과</a>
+                  <a href="javascript/effect/quizEffect.html" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/javascript/effect/quizEffect.html" class="overlay-text-thumb1-donut bts">바로보기</a>
                   <span class="overlay-text-thumb2-donut">SCRIPT</span>
                 </div>
                 <img src="assets/img/owl_3d.png" alt="portfolio">
@@ -374,8 +374,8 @@
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">JAVASCRIPT</span>
-                  <a href="javascript/effect/sliderEffect.html" class="overlay-text-thumb-donut bts">Slide</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/javascript/effect/sliderEffect.html" class="overlay-text-thumb1-donut bts">슬라이드 효과</a>
+                  <a href="javascript/effect/sliderEffect.html" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/javascript/effect/sliderEffect.html" class="overlay-text-thumb1-donut bts">바로보기</a>
                   <span class="overlay-text-thumb2-donut">SCRIPT</span>
                 </div>
                 <img src="assets/img/bear_3d.png" alt="portfolio">
@@ -394,8 +394,8 @@
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">JAVASCRIPT</span>
-                  <a href="javascript/effect/sliderEffect.html" class="overlay-text-thumb-donut bts">Mouse</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/javascript/effect/sliderEffect.html" class="overlay-text-thumb1-donut bts">마우스 효과</a>
+                  <a href="javascript/effect/sliderEffect.html" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/javascript/effect/sliderEffect.html" class="overlay-text-thumb1-donut bts">바로보기</a>
                   <span class="overlay-text-thumb2-donut">SCRIPT</span>
                 </div>
                 <img src="assets/img/speak-no-evil_monkey_3d 2.png" alt="portfolio">
@@ -413,8 +413,8 @@
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">JAVASCRIPT</span>
-                  <a href="jjavascript/effect/parallaxEffect.html" class="overlay-text-thumb-donut bts">Parallax</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/jjavascript/effect/parallaxEffect.html" class="overlay-text-thumb1-donut bts">패럴렉스 효과</a>
+                  <a href="jjavascript/effect/parallaxEffect.html" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/javascript/effect/parallaxEffect.html" class="overlay-text-thumb1-donut bts">바로보기</a>
                   <span class="overlay-text-thumb2-donut">SCRIPT</span>
                 </div>
                 <img src="assets/img/panda_3d 1.png" alt="portfolio">
@@ -432,8 +432,8 @@
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">JAVASCRIPT</span>
-                  <a href="javascript/effect/gameEffect.html" class="overlay-text-thumb-donut bts">Game</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/javascript/effect/gameEffect.html" class="overlay-text-thumb1-donut bts">게임 효과</a>
+                  <a href="javascript/effect/gameEffect.html" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/javascript/effect/gameEffect.html" class="overlay-text-thumb1-donut bts">바로보기</a>
                   <span class="overlay-text-thumb2-donut">SCRIPT</span>
                 </div>
                 <img src="assets/img/frog_3d 1.png" alt="portfolio">
@@ -451,8 +451,8 @@
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">SVG</span>
-                  <a href="animation/svg.html" class="overlay-text-thumb-donut bts">SVG</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/animation/svg.html" class="overlay-text-thumb1-donut bts">SVG</a>
+                  <a href="animation/svg.html" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/animation/svg.html" class="overlay-text-thumb1-donut bts">바로보기</a>
                   <span class="overlay-text-thumb2-donut">SVG</span>
                 </div>
                 <img src="assets/img/t-rex_3d 1.png" alt="portfolio">
@@ -470,8 +470,8 @@
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">CSS</span>
-                  <a href="animation/css.html" class="overlay-text-thumb-donut bts">CSS</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/animation/css.html" class="overlay-text-thumb1-donut bts">ANIMATION</a>
+                  <a href="animation/css.html" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/animation/css.html" class="overlay-text-thumb1-donut bts">바로보기</a>
                   <span class="overlay-text-thumb2-donut">CSS</span>
                 </div>
                 <img src="assets/img/elephant_3d 1.png" alt="portfolio">
@@ -489,8 +489,8 @@
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">MySQL</span>
-                  <a href="sql/index.html" class="overlay-text-thumb-donut bts">MySQL</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/sql/index.html" class="overlay-text-thumb1-donut bts">MySQL</a>
+                  <a href="sql/index.html" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/sql/index.html" class="overlay-text-thumb1-donut bts">바로보기</a>
                   <span class="overlay-text-thumb2-donut">MySQL</span>
                 </div>
                 <img src="assets/img/eyes_3d 2.png" alt="portfolio">
@@ -504,33 +504,12 @@
           <!-- //box -->
 
           <!-- box -->
-          <!-- <section class="color-shape animation">
-            <a href="sql/index.html" target="_blank">
-              <div class="image-wrap">
-                <div class="hover-wrap">
-                  <span class="overlay-img-donut">PHP</span>
-                  <span class="overlay-text-thumb-donut">PHP</span>
-                  <span class="overlay-text-thumb1-donut">PHP</span>
-                  <span class="overlay-text-thumb2-donut">PHP</span>
-                </div>
-                <img src="assets/img/svg-french-fries.svg" alt="portfolio">
-                <div class="img-text donutImg">
-                  <h5>PHP</h5>
-                  <p>PHP</p>
-                  <span>PHP</span>
-                </div>
-              </div>
-            </a>
-          </section> -->
-          <!-- //box -->
-
-          <!-- box -->
           <section class="color-shape animation">
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">PHP GITHUB</span>
-                  <a href="javascript/index.html" class="overlay-text-thumb-donut bts">PHP GITHUB</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/javascript/index.html" class="overlay-text-thumb1-donut bts">PHP GITHUB</a>
+                  <a href="javascript/index.html" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/javascript/index.html" class="overlay-text-thumb1-donut bts">바로보기</a>
                   <span class="overlay-text-thumb2-donut">PHP GITHUB</span>
                 </div>
                 <img src="assets/img/dog_face_3d 1.png" alt="portfolio">
@@ -548,8 +527,8 @@
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">PROJECT</span>
-                  <a href="http://vvv0032.dothome.co.kr/" class="overlay-text-thumb-donut bts">PROJECT</a>
-                  <a href="http://vvv0032.dothome.co.kr/" class="overlay-text-thumb1-donut bts">PROJECT</a>
+                  <a href="http://vvv0032.dothome.co.kr/Diary/index.html" class="overlay-text-thumb-donut bts">사이트맵</a>
+                  <a href="http://vvv0032.dothome.co.kr/Diary/PHP/main/main.php" class="overlay-text-thumb1-donut bts">메인보기</a>
                   <span class="overlay-text-thumb2-donut">PROJECT</span>
                 </div>
                 <img src="assets/img/deciduous_tree_3d 1.png" alt="portfolio">
