--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">CSS</span>
-                  <a href="css/index.html" class="overlay-text-thumb-donut bts">바로보기</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/css/index.html" class="overlay-text-thumb1-donut bts">소스보기</a>
+                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/css/index.html" class="overlay-text-thumb-donut bts">바로보기</a>
+                  <a href="css/index.html" class="overlay-text-thumb1-donut bts">소스보기</a>
                   <span class="overlay-text-thumb2-donut">CSS</span>
                 </div>
                 <img src="assets/img/sloth_3d.png" alt="portfolio">
@@ -260,8 +260,8 @@
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">SITE 1</span>
-                  <a href="site/site1/index.html" class="overlay-text-thumb-donut bts">소스보기</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/site/site1/index.html" class="overlay-text-thumb1-donut bts">바로보기</a>
+                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/site/site1/index.htmlsite/site1/index.html" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <a href="site/site1/index.html" class="overlay-text-thumb1-donut bts">바로보기</a>
                   <span class="overlay-text-thumb2-donut">SITE</span>
                 </div>
                 <img src="assets/img/lion_3d.png" alt="portfolio">
@@ -279,8 +279,8 @@
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">SITE 2</span>
-                  <a href="site/site2/index.html" class="overlay-text-thumb-donut">소스보기</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/site/site2/index.html" class="overlay-text-thumb1-donut bts">바로보기</a>
+                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/site/site2/index.html" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <a href="site/site2/index.html" class="overlay-text-thumb1-donut bts">바로보기</a>
                   <span class="overlay-text-thumb2-donut">SITE 2</span>
                 </div>
                 <img src="assets/img/snowman_3d.png" alt="portfolio">
@@ -298,8 +298,8 @@
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">SITE 3</span>
-                  <a href="site/site3/index.html" class="overlay-text-thumb-donut bts">소스보기</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/site/site3/index.html" class="overlay-text-thumb1-donut bts">바로보기</a>
+                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/site/site3/index.html" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <a href="site/site3/index.html" class="overlay-text-thumb1-donut bts">바로보기</a>
                   <span class="overlay-text-thumb2-donut">SITE 3</span>
                 </div>
                 <img src="assets/img/sun_with_face_3d.png" alt="portfolio">
@@ -313,31 +313,12 @@
           <!-- //box -->
 
           <!-- box -->
-          <section class="color-shape site">
-              <div class="image-wrap">
-                <div class="hover-wrap">
-                  <span class="overlay-img-donut">SITE_04</span>
-                  <a href="site/site1/index.html" class="overlay-text-thumb-donut bts">소스보기</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/site/site1/index.html" class="overlay-text-thumb1-donut bts">바로보기</a>
-                  <span class="overlay-text-thumb2-donut">SITE 4</span>
-                </div>
-                <img src="assets/img/tropical_fish_3d.png" alt="portfolio">
-                <div class="img-text donutImg">
-                  <h5>SITE</h5>
-                  <p>SITE 유형_04</p>
-                  <span>SITE</span>
-                </div>
-              </div>
-          </section>
-          <!-- //box -->
-
-          <!-- box -->
           <section class="color-shape script">
               <div class="image-wrap">
                 <div class="hover-wrap">
-                  <span class="overlay-img-donut">JAVASCRIPT</span>
-                  <a href="javascript/effect/searchEffect.html" class="overlay-text-thumb-donut bts">소스보기</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/javascript/effect/searchEffect.html" class="overlay-text-thumb1-donut bts">바로보기</a>
+                  <span class="overlay-img-donut">Search Effect</span>
+                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/javascript/effect/searchEffect01.html" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <a href="javascript/effect/searchEffect01.html" class="overlay-text-thumb1-donut bts">바로보기</a>
                   <span class="overlay-text-thumb2-donut">SCRIPT</span>
                 </div>
                 <img src="assets/img/club_suit_3d.png" alt="portfolio">
@@ -354,9 +335,9 @@
           <section class="color-shape script">
               <div class="image-wrap">
                 <div class="hover-wrap">
-                  <span class="overlay-img-donut">JAVASCRIPT</span>
-                  <a href="javascript/effect/quizEffect.html" class="overlay-text-thumb-donut bts">소스보기</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/javascript/effect/quizEffect.html" class="overlay-text-thumb1-donut bts">바로보기</a>
+                  <span class="overlay-img-donut">Quiz Effect</span>
+                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/javascript/effect/searchEffect01.html" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <a href="javascript/effect/quizEffect01.html" class="overlay-text-thumb1-donut bts">바로보기</a>
                   <span class="overlay-text-thumb2-donut">SCRIPT</span>
                 </div>
                 <img src="assets/img/owl_3d.png" alt="portfolio">
@@ -373,9 +354,9 @@
           <section class="color-shape script">
               <div class="image-wrap">
                 <div class="hover-wrap">
-                  <span class="overlay-img-donut">JAVASCRIPT</span>
-                  <a href="javascript/effect/sliderEffect.html" class="overlay-text-thumb-donut bts">소스보기</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/javascript/effect/sliderEffect.html" class="overlay-text-thumb1-donut bts">바로보기</a>
+                  <span class="overlay-img-donut">Slide Effect</span>
+                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/javascript/effect/sliderEffect.html" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <a href="javascript/effect/sliderEffect01.html" class="overlay-text-thumb1-donut bts">바로보기</a>
                   <span class="overlay-text-thumb2-donut">SCRIPT</span>
                 </div>
                 <img src="assets/img/bear_3d.png" alt="portfolio">
@@ -393,9 +374,9 @@
           <section class="color-shape script">
               <div class="image-wrap">
                 <div class="hover-wrap">
-                  <span class="overlay-img-donut">JAVASCRIPT</span>
-                  <a href="javascript/effect/sliderEffect.html" class="overlay-text-thumb-donut bts">소스보기</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/javascript/effect/sliderEffect.html" class="overlay-text-thumb1-donut bts">바로보기</a>
+                  <span class="overlay-img-donut">Mouse Effect</span>
+                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/javascript/effect/mouseEffect01.html" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <a href="javascript/effect/mouseEffect01.html" class="overlay-text-thumb1-donut bts">바로보기</a>
                   <span class="overlay-text-thumb2-donut">SCRIPT</span>
                 </div>
                 <img src="assets/img/speak-no-evil_monkey_3d 2.png" alt="portfolio">
@@ -412,9 +393,9 @@
           <section class="color-shape script">
               <div class="image-wrap">
                 <div class="hover-wrap">
-                  <span class="overlay-img-donut">JAVASCRIPT</span>
-                  <a href="jjavascript/effect/parallaxEffect.html" class="overlay-text-thumb-donut bts">소스보기</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/javascript/effect/parallaxEffect.html" class="overlay-text-thumb1-donut bts">바로보기</a>
+                  <span class="overlay-img-donut">Parallax Effect</span>
+                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/javascript/effect/parallaxEffect.html" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <a href="javascript/effect/parallaxEffect01.html" class="overlay-text-thumb1-donut bts">바로보기</a>
                   <span class="overlay-text-thumb2-donut">SCRIPT</span>
                 </div>
                 <img src="assets/img/panda_3d 1.png" alt="portfolio">
@@ -431,9 +412,9 @@
           <section class="color-shape script">
               <div class="image-wrap">
                 <div class="hover-wrap">
-                  <span class="overlay-img-donut">JAVASCRIPT</span>
-                  <a href="javascript/effect/gameEffect.html" class="overlay-text-thumb-donut bts">소스보기</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/javascript/effect/gameEffect.html" class="overlay-text-thumb1-donut bts">바로보기</a>
+                  <span class="overlay-img-donut">Game Effect</span>
+                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/javascript/effect/gameEffect01.html" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <a href="javascript/effect/gameEffect01.html" class="overlay-text-thumb1-donut bts">바로보기</a>
                   <span class="overlay-text-thumb2-donut">SCRIPT</span>
                 </div>
                 <img src="assets/img/frog_3d 1.png" alt="portfolio">
@@ -451,8 +432,8 @@
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">SVG</span>
-                  <a href="animation/svg.html" class="overlay-text-thumb-donut bts">소스보기</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/animation/svg.html" class="overlay-text-thumb1-donut bts">바로보기</a>
+                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/animation/svg.html" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <a href="animation/svg.html" class="overlay-text-thumb1-donut bts">바로보기</a>
                   <span class="overlay-text-thumb2-donut">SVG</span>
                 </div>
                 <img src="assets/img/t-rex_3d 1.png" alt="portfolio">
@@ -470,8 +451,8 @@
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">CSS</span>
-                  <a href="animation/css.html" class="overlay-text-thumb-donut bts">소스보기</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/animation/css.html" class="overlay-text-thumb1-donut bts">바로보기</a>
+                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/animation/css.html" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <a href="animation/css.html" class="overlay-text-thumb1-donut bts">바로보기</a>
                   <span class="overlay-text-thumb2-donut">CSS</span>
                 </div>
                 <img src="assets/img/elephant_3d 1.png" alt="portfolio">
@@ -489,14 +470,14 @@
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">MySQL</span>
-                  <a href="sql/index.html" class="overlay-text-thumb-donut bts">소스보기</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/sql/index.html" class="overlay-text-thumb1-donut bts">바로보기</a>
+                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/sql/index.html" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <a href="sql/index.html" class="overlay-text-thumb1-donut bts">바로보기</a>
                   <span class="overlay-text-thumb2-donut">MySQL</span>
                 </div>
                 <img src="assets/img/eyes_3d 2.png" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>MySQL</h5>
-                  <p>MySQL</p>
+                  <p>MySQL 유형</p>
                   <span>MySQL</span>
                 </div>
               </div>
@@ -508,14 +489,14 @@
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">PHP GITHUB</span>
-                  <a href="javascript/index.html" class="overlay-text-thumb-donut bts">소스보기</a>
-                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/javascript/index.html" class="overlay-text-thumb1-donut bts">바로보기</a>
+                  <a href="https://github.com/kimsangjunv1/codingclass/blob/main/javascript/index.html" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <a href="javascript/index.html" class="overlay-text-thumb1-donut bts">바로보기</a>
                   <span class="overlay-text-thumb2-donut">PHP GITHUB</span>
                 </div>
                 <img src="assets/img/dog_face_3d 1.png" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>PHP GITHUB</h5>
-                  <p>PHP GITHUB</p>
+                  <p>PHP GITHUB 개인작업</p>
                   <span>PHP GITHUB</span>
                 </div>
               </div>
@@ -528,13 +509,13 @@
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">PROJECT</span>
                   <a href="http://vvv0032.dothome.co.kr/Diary/index.html" class="overlay-text-thumb-donut bts">사이트맵</a>
-                  <a href="http://vvv0032.dothome.co.kr/Diary/PHP/main/main.php" class="overlay-text-thumb1-donut bts">메인보기</a>
+                  <!-- <a href="http://vvv0032.dothome.co.kr/Diary/PHP/main/main.php" class="overlay-text-thumb1-donut bts">메인보기</a> -->
                   <span class="overlay-text-thumb2-donut">PROJECT</span>
                 </div>
                 <img src="assets/img/deciduous_tree_3d 1.png" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>PROJECT</h5>
-                  <p>PROJECT</p>
+                  <p>팀 프로젝트 : 꾸다</p>
                   <span>PROJECT</span>
                 </div>
               </div>
@@ -547,15 +528,78 @@
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">PROJECT GITHUB</span>
-                  <a href="https://github.com/Diary-GGuDa/index/tree/main/Diary" class="overlay-text-thumb-donut bts">PROJECT GITHUB</a>
-                  <a href="https://github.com/Diary-GGuDa/index/tree/main/Diary" class="overlay-text-thumb1-donut bts">PROJECT GITHUB</a>
+                  <a href="https://github.com/Diary-GGuDa/index/tree/main/Diary" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <!-- <a href="https://github.com/Diary-GGuDa/index/tree/main/Diary" class="overlay-text-thumb1-donut bts">메인보기</a> -->
                   <span class="overlay-text-thumb2-donut">PROJECT GITHUB</span>
                 </div>
                 <img src="assets/img/crocodile_3d 1.png" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>PROJECT GITHUB</h5>
-                  <p>PROJECT GITHUB</p>
+                  <p>팀 프로젝트 : 꾸다 깃허브</p>
                   <span>PROJECT GITHUB</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box -->
+
+          <!-- box -->
+          <section class="color-shape animation">
+            <a href="https://github.com/Diary-GGuDa/index/tree/main/Diary" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">React</span>
+                  <a href="https://github.com/kimsangjunv1/reactclass" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <!-- <a href="https://github.com/Diary-GGuDa/index/tree/main/Diary" class="overlay-text-thumb1-donut bts">메인보기</a> -->
+                  <span class="overlay-text-thumb2-donut">React</span>
+                </div>
+                <img src="assets/img/crocodile_3d 1.png" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>React</h5>
+                  <p>팀 프로젝트 : 꾸다 깃허브</p>
+                  <span>React</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box -->
+
+          <!-- box -->
+          <section class="color-shape animation">
+            <a href="https://github.com/kimsangjunv1/reactclass" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">React_01</span>
+                  <a href="https://github.com/kimsangjunv1/vueclass/tree/main/src" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <a href="https://creative-lokum-2822d2.netlify.app/" class="overlay-text-thumb1-donut bts">메인보기</a>
+                  <span class="overlay-text-thumb2-donut">React_01</span>
+                </div>
+                <img src="assets/img/crocodile_3d 1.png" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>React_01</h5>
+                  <p>리액트 01</p>
+                  <span>React_01</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box -->
+
+          <!-- box -->
+          <section class="color-shape animation">
+            <a href="https://github.com/kimsangjunv1/vueclass" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">Vue_01</span>
+                  <a href="https://github.com/kimsangjunv1/vueclass" class="overlay-text-thumb-donut bts">소스보기</a>
+                  <a href="https://github.com/kimsangjunv1/vueclass" class="overlay-text-thumb1-donut bts">메인보기</a>
+                  <span class="overlay-text-thumb2-donut">Vue_01</span>
+                </div>
+                <img src="assets/img/crocodile_3d 1.png" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>Vue_01</h5>
+                  <p>뷰 01</p>
+                  <span>Vue_01</span>
                 </div>
               </div>
             </a>
