--- a/javascript/effect/gameEffect01.html
+++ b/javascript/effect/gameEffect01.html
@@ -386,12 +386,12 @@
                         <p>START</p>
                     </div>
                     <div class="memory_end" style="display:none">
-                        <p>게임 종료</p>
+                        <p style="text-align:center;">게임 종료</p>
                         <ul>
-                            <li>당신의 점수는?</li>
+                            <li style="text-align:center;">당신의 점수는?</li>
                         </ul>
-                        <p class="memory_count">100점</p>
-                        <p>재시작</p>
+                        <!-- <p class="memory_count" style="top: 50%; left: 50%; transform: translate(-50%, -50%); line-height: 3.3;">100</p> -->
+                        <p style="position:absolute; bottom: 188px;left: 50%; padding: 10px;width: 90px;transform: translate(-50%, 0);text-align:center;border:1px solid #fff; cursor:pointer;">재시작</p>
                     </div>
                     <h2>단어 맞추기!</h2>
                     <p class="memory_desc"><i></i>초 안에 맞춰주세요!<br>틀릴시 점수가 깎여요!</p>
