--- a/javascript/effect/gameEffect01.html
+++ b/javascript/effect/gameEffect01.html
@@ -963,6 +963,10 @@
             //시간 정지
             clearInterval(timeInterval)
         })
+
+        document.querySelector(".icon5 img").addEventListener("click", ()=>{
+            location.href = 'https://github1s.com/kimsangjunv1';
+        })
     </script>
     <script>
         const audioIcon = document.querySelector(".music__header img")
