--- a/javascript/effect/gameEffect01.html
+++ b/javascript/effect/gameEffect01.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../assets/css/bg.css">
+    <link rel="stylesheet" href="../assets/css/bg_sub.css">
     <link rel="stylesheet" href="../assets/css/game.css">
     <link rel="stylesheet" href="../assets/css/music.css">
     <link rel="stylesheet" href="../assets/css/search_copy.css">
@@ -533,6 +533,20 @@
             </div>
         </div>
     </div>
+    
+    <div id='stars'></div>
+    <div id='stars2'></div>
+    <div id='stars3'></div>
+    <div id='title'>
+        <span>
+          PURE CSS
+        </span>
+        <br>
+        <span>
+          PARALLAX PIXEL STARS
+        </span>
+      </div>
+      
 
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
